--- a/src/main/res/layout/fragment_camera.xml
+++ b/src/main/res/layout/fragment_camera.xml
@@ -18,7 +18,8 @@
             android:text="Go to Camera"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_margin="20dp"/>
+            android:layout_margin="20dp"
+            android:visibility="gone"/>
 
         <ImageView
             android:id="@+id/ivPicture"
