--- a/src/main/res/menu/activity_main_drawer.xml
+++ b/src/main/res/menu/activity_main_drawer.xml
@@ -29,7 +29,7 @@
         <item
             android:id="@+id/nav_faq"
             android:icon="@drawable/ic_forum_black_24px"
-            android:title="FAQ" />
+            android:title="Frequently asked questions" />
         <item
             android:id="@+id/nav_contact"
             android:icon="@drawable/ic_call_black_24px"
