--- a/src/main/res/layout/fragment_main_page.xml
+++ b/src/main/res/layout/fragment_main_page.xml
@@ -42,7 +42,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Press the button in the top left corner to enter the main menu. There you will find more information and guidance on when and how to take the video."
+                android:text="Press the button in the top left corner to enter the main menu. There you will find more information on when and how to take the video."
                 android:paddingRight="30dp"
                 android:textSize="18dp"/>
 
@@ -57,14 +57,14 @@
             android:layout_marginBottom="30dp"  >
 
             <ImageView
-                android:layout_width="205dp"
+                android:layout_width="180dp"
                 android:layout_height="25dp"
                 android:src="@drawable/logo" />
 
             <ImageView
-                android:layout_width="130dp"
+                android:layout_width="120dp"
                 android:layout_height="20dp"
-                android:layout_marginLeft="5dp"
+                android:layout_marginLeft="20dp"
                 android:paddingRight="2dp"
                 android:src="@drawable/ntnu"/>
 
