--- a/src/main/res/layout/fragment_start_page.xml
+++ b/src/main/res/layout/fragment_start_page.xml
@@ -46,6 +46,13 @@
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true" >
 
+            <ImageView
+                android:layout_width="100dp"
+                android:layout_height="50dp"
+                android:src="@drawable/barn"
+                android:paddingRight="10dp"
+                android:layout_gravity="center"/>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -53,7 +60,7 @@
                 android:text="Promise"
                 android:textSize="40dp"
                 android:paddingBottom="100dp"
-                android:textColor="#512DA8"/>
+                android:textColor="#616161"/>
 
             <Button
                 android:id="@+id/bLogin"
@@ -85,14 +92,14 @@
             android:layout_marginBottom="30dp"  >
 
             <ImageView
-                android:layout_width="205dp"
+                android:layout_width="180dp"
                 android:layout_height="25dp"
                 android:src="@drawable/logo" />
 
             <ImageView
-                android:layout_width="130dp"
+                android:layout_width="120dp"
                 android:layout_height="20dp"
-                android:layout_marginLeft="5dp"
+                android:layout_marginLeft="20dp"
                 android:paddingRight="2dp"
                 android:src="@drawable/ntnu"/>
 
