--- a/src/main/res/layout/fragment_next_video.xml
+++ b/src/main/res/layout/fragment_next_video.xml
@@ -14,7 +14,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Next Video"
+            android:text="When can I record the video?"
             android:textSize="20dp"
             android:id="@+id/textView3" />
 
@@ -38,13 +38,62 @@
             android:id="@+id/new_video_now"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:text="Take a video now"
+            android:text="Record a video now"
             android:background="@color/colorPrimary"
             android:textColor="#FFFFFF"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="50dp"
             android:visibility="gone"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="14. Mar"
+            android:id="@+id/termDate"
+            android:layout_marginBottom="67dp"
+            android:layout_alignBottom="@+id/imageView"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingRight="50dp"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="21. May"
+            android:id="@+id/tenWeeks"
+            android:layout_alignTop="@+id/thirteenWeeks"
+            android:layout_toLeftOf="@+id/thirteenWeeks"
+            android:layout_toStartOf="@+id/textView" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="13. Jun"
+            android:paddingRight="10dp"
+            android:id="@+id/thirteenWeeks"
+            android:layout_alignTop="@+id/termDate"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true" />
+
+        <TextView
+            android:layout_width="120dp"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:text="Record a video"
+            android:paddingLeft="32dp"
+            android:id="@+id/textView"
+            android:textSize="13sp"
+            android:layout_marginTop="47dp"
+            android:layout_alignTop="@+id/imageView"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginRight="33dp"
+            android:layout_marginEnd="33dp" />
+
 
     </RelativeLayout>
 
